# cafateer-cms

./: .gitignore  README.md  build_styles  bun.lockb  watch_manager  watch_presenter
go_proj/: go.mod  program.go
rust_proj/: .env  .eslintrc.cjs  Cargo.toml  bun.lockb  cafe.service  package.json  tailwind.config.js  watch_presenter
rust_proj/assets/css/: main.css  manager.css  presenter.css
rust_proj/src/: auth_middleware.rs  data.rs  data_context.rs  data_models.rs  lib.rs  main.rs  manager.rs  presenter.rs  session.rs  static_ref.rs  view_models.rs
rust_proj/src/data/: account.rs  bios.rs  categories.rs  context.rs  details.rs  fetcher.rs  manager.rs  menu_item_details.rs  menu_items.rs  references.rs
rust_proj/src/data_context/: context.rs  manager.rs  references.rs
rust_proj/src/data_models/: account_model.rs  category_model.rs  custom_items.rs  detail_items.rs  menu_item_model.rs  menu_items.rs  reference_items.rs
rust_proj/src/manager/: account_page.rs  categories_page.rs  category_manager.rs  components.rs  detail_manager.rs  details.rs  details_page.rs  editors.rs  home.rs  language_manager.rs  macro_templates.rs  menu.rs  menu_item_detail_manager.rs  menu_item_manager.rs  menu_page.rs  pages.rs  session.rs  start.rs  templates.rs
rust_proj/src/models/: data.rs
rust_proj/src/presenter/: menu.rs  restaurant.rs
rust_proj/src/session/: account.rs  claims.rs  data.rs  models.rs  security.rs  templates.rs  tokens.rs
rust_proj/src/static_ref/: langs.rs
rust_proj/supabase/: config.toml
rust_proj/templates/: manager.tw.config.js  presenter_in.css
(+173 files in other folders)
