[package]
name = "cafeteer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama_axum = "0.4.0"
axum-core = "0.4.3"
axum = "0.7.4"
http = "1.0.0"
hyper = { version = "1.1.0", features = ["full"] }
clap = "4.4.18"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
askama = { version = "0.12.1", features = ["with-axum"] }
once_cell = "1.19.0"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "uuid"] }
dotenv = "0.15.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
